--- a/frontend-new/package.json
+++ b/frontend-new/package.json
@@ -6,10 +6,24 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "admin-lte": "2.3.11",
+    "axios": "0.18.0",
+    "font-awesome": "4.7.0",
+    "ionicons": "4.4.3",
+    "jquery": "2.2.3",
+    "react-redux": "5.0.7",
+    "react-redux-toastr": "7.4.0",
+    "react-router": "4.3.1",
+    "react-router-dom": "4.3.1",
+    "redux": "4.0.0",
+    "redux-form": "7.4.2",
+    "redux-multi": "0.1.12",
+    "redux-promise": "0.6.0",
+    "redux-thunk": "2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
